# 2024-06-18

./: CMakeLists.txt  README.rst
exercise/: README.rst
exercise/firmware/: CMakeLists.txt
exercise/toolcase/base/: CMakeLists.txt
exercise/toolcase/boiling-pot/: CMakeLists.txt
exercise/toolcase/data-logger/: CMakeLists.txt  sink-logger.h
livecoding/: message.cmake
livecoding/demo/: CMakeLists.txt
livecoding/demo/libhello/: CMakeLists.txt
